fix conrols misalignment on safari

--- a/components/SidewaysSelector/SidewaysSelector.module.scss
+++ b/components/SidewaysSelector/SidewaysSelector.module.scss
@@ -10,8 +10,10 @@
   margin: 0.8rem;
   font-size: 0.9rem;
   text-align: end;
+  width: 4rem;
   @media screen and (min-width: 450px) {
     font-size: 1rem;
+    width: 8rem;
   }
 }
 
@@ -20,13 +22,13 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-left: 1rem;
+  // margin-left: 1rem;
 
   ul {
     display: flex;
     align-items: center;
     list-style: none;
-    width: 8rem;
+    width: 7rem;
     padding: 0;
     overflow-x: hidden;
     scroll-snap-type: x mandatory;
@@ -37,10 +39,14 @@
       width: 0;
       height: 0;
     }
+    @media screen and (min-width: 450px) {
+      font-size: 1rem;
+      width: 8rem;
+    }
   }
 
   li {
-    min-width: 8rem;
+    min-width: 7rem;
     text-align: center;
     margin: 0 1rem;
     white-space: nowrap;
@@ -50,6 +56,7 @@
 
     @media screen and (min-width: 450px) {
       font-size: 1.2rem;
+      min-width: 8rem;
     }
   }
 }
